[metadata]
name = lambda-handlers
version = attr: lambda_handlers.version.__version__
description = A collection of useful decorators for making AWS Lambda handlers
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = http://lambda-handlers.readthedocs.io
    Source Code = https://github.com/enter-at/lambda-handlers
    Bug Tracker = https://github.com/enter-at/lambda-handlers/issues
    Changelog = https://github.com/enter-at/lambda-handlers/blob/master/CHANGELOG.md
author = Steffen Leistner, Alexandre Savio
author_email = info@enterat.de
license = Apache License Version 2.0
license-file = LICENSE
keywords =
    aws
    lambda
    serverless
    decorator
    http
    api
    rest
    json
    validation
    jsonschema
    marshmallow
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
test_suite = tests
setup_requires =
    wheel
    setuptools
    pytest-runner
install_requires =
tests_require =
    pytest
    marshmallow==2.19.5
    jsonschema==3.0.1

[options.extras_require]
jsonschema =
    jsonschema==3.0.1
marshmallow =
    marshmallow==2.19.5

[pydocstyle]
inherit = false
convention = numpy
match = (?!test_).*\.py
ignore-decorators = property

[flake8]
max-line-length = 120
max-complexity = 10
select = C,E,F,W,B,B950
ignore = E501,E126

[isort]
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
force_single_line = False
indent = 4
line_length = 120
wrap_length = 60
not_skip = __init__.py
length_sort = True
known_first_party = lambda_handlers
known_third_party = pytest,marshmallow,jsonschema
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.7
ignore_missing_imports = True
warn_unused_configs = True

[tox:tox]
envlist =
    lint,
    doclint,
    isort,
    mypy,
    tests
skipsdist = True

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
norecursedirs =
    node_modules
console_output_style = progress
testpaths = lambda_handlers examples

[coverage:run]
branch = True

[coverage:report]
include =
    lambda_handlers/*
omit =
    */tests/*

[testenv]
basepython = python3
whitelist_externals = make
deps =
    lint: flake8
    lint: flake8-bugbear
    doclint: pydocstyle
    isort: isort
    mypy: mypy
passenv =
    CI = 1
setenv =
    PYTHONPATH = {toxinidir}:{toxinidir}
    TESTING = True
commands =
    lint: flake8 lambda_handlers
    isort: isort -c -rc lambda_handlers
    mypy: mypy lambda_handlers
    doclint: pydocstyle --convention=numpy -v lambda_handlers

[testenv:tests]
deps =
    coverage
commands =
    python setup.py develop
    coverage run -m pytest
    coverage report

[testenv:docs]
deps = -rdocs/requirements.txt
changedir = {toxinidir}/docs
commands =
    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
